feat : 음원 업로드/수정폼/상세페이지 view 구현

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -70,6 +70,13 @@
                     프로파일
                 </span>
             </a>
+
+            <a href="/song/create" class="inline-flex" sec:authorize="isAuthenticated()">
+                <i class="fa-solid fa-upload"></i>
+                <span class="ml-[2px] hidden sm:block">
+                    음원 업로드
+                </span>
+            </a>
         </div>
     </div>
 </header>
