--- a/src/main/resources/templates/admin/layout/layout.html
+++ b/src/main/resources/templates/admin/layout/layout.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE" th:text="${@appConfig.siteName}"></title>
+    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE" th:text="|${@appConfig.siteName} 관리자|"></title>
 
     <!-- 제이쿼리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -39,49 +39,24 @@
 
 <header class="fixed z-40 top-0 left-0 w-full bg-white border-b-[1px] border-b-[color:#efefef] h-[35px]">
     <div class="container mx-auto h-full flex items-center px-2">
-        <a href="/" class="logo flex font-bold mr-auto">
+        <a href="/adm/home/main" class="logo flex font-bold mr-auto">
             <span class="text-[#1E9EFE]">M</span>
             <span class="ml-[2px] hidden sm:block">UT</span>
+            <span class="ml-[2px]">ADMIN</span>
         </a>
 
         <div class="flex gap-4">
-            <a href="/adm/home/main" class="inline-flex" sec:authorize="hasAuthority('ADMIN')">
+            <a href="/adm/home/main" class="inline-flex">
                 <i class="fa-solid fa-gauge-high"></i>
                 <span class="ml-[2px] hidden sm:block">
                     관리자 홈
                 </span>
             </a>
 
-            <a href="/member/login" class="inline-flex" sec:authorize="isAnonymous()">
-                <i class="fa-solid fa-arrow-right-to-bracket"></i>
+            <a href="/" class="inline-flex">
+                <i class="fa-solid fa-house"></i>
                 <span class="ml-[2px] hidden sm:block">
-                    로그인
-                </span>
-            </a>
-            <a href="/member/join" class="inline-flex" sec:authorize="isAnonymous()">
-                <i class="fa-solid fa-user-plus"></i>
-                <span class="ml-[2px] hidden sm:block">
-                    회원가입
-                </span>
-            </a>
-            <a href="javascript: document.logoutForm.submit();" class="inline-flex" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                <span class="ml-[2px] hidden sm:block">
-                    로그아웃
-                </span>
-            </a>
-            <form name="logoutForm" th:action="@{/member/logout}" method="post" hidden></form>
-            <a href="/member/profile" class="inline-flex" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-user"></i>
-                <span class="ml-[2px] hidden sm:block">
-                    프로파일
-                </span>
-            </a>
-
-            <a href="/song/create" class="inline-flex" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-upload"></i>
-                <span class="ml-[2px] hidden sm:block">
-                    음원 업로드
+                    홈
                 </span>
             </a>
         </div>
@@ -91,27 +66,6 @@
 <div class="flex-grow flex flex-col">
     <main layout:fragment="main" class="flex-grow flex flex-col"></main>
 </div>
-
-<footer class="border-t-[1px] border-t-[color:#efefef] py-3 text-[color:#777] text-[14px] mt-5">
-    <div class="container mx-auto flex flex-col gap-1 px-2">
-        <div>
-            <a href="/">
-                <span>사업자정보확인</span>
-                <span class="inline-block scale-[.7]">▼</span>
-            </a>
-        </div>
-
-        <div class="flex gap-3">
-            <a href="/">이용약관</a>
-            <a href="/">개인정보 처리방침</a>
-            <a href="/">청소년보호정책</a>
-        </div>
-
-        <div>
-            <a href="/">©MUT Corp.</a>
-        </div>
-    </div>
-</footer>
 
 <script src="/resource/common/common.js"></script>
 
