feat : 정산 시 폼체크 설정

--- a/src/main/resources/templates/adm/rebate/rebateOrderItemList.html
+++ b/src/main/resources/templates/adm/rebate/rebateOrderItemList.html
@@ -55,7 +55,10 @@
                     </tbody>
                 </table>
 
-                <a href="" class="btn btn-primary btn-sm">선택정산</a>
+                <a href="javascript:;" onclick="RebateForm__submit();" class="btn btn-primary btn-sm">선택정산</a>
+                <form method="POST" name="rebateForm" th:action="@{|/adm/rebate/rebate|}" hidden>
+
+                </form>
 
                 <script>
                     // 전체선택 체크박스
@@ -72,6 +75,24 @@
                         const allChecked = $orderItemCheckbox.length == $('.orderItemCheckbox:checked').length;
 
                         $orderItemCheckboxAll.prop('checked', allChecked);
+                    }
+
+                    let RebateForm__submitDone = false;
+
+                    function RebateForm__submit() {
+                        if ( RebateForm__submitDone ) return;
+
+                        const form = document.rebateForm;
+
+                        const $checked = $('.orderItemCheckbox:checked');
+
+                        if ( $checked.length == 0 ) {
+                            alert('정산할 주문품목을 선택해주세요.');
+                            return;
+                        }
+
+                        form.submit();
+                        RebateForm__submitDone = true;
                     }
                 </script>
             </div>
